Minor Updates and readme

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>LWN</title>
+    <title>Login With Nebulas</title>
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,300,500" rel="stylesheet">
+    <link rel="icon" href="img/nebLogo.png">
     <!--
 		CSS
 		============================================= -->
@@ -26,6 +27,7 @@
                 <div class="header-top d-flex justify-content-between align-items-center">
                     <div class="logo">
                         <h3>Login With Nebulas</h3>
+                        <h5>(Currently testnet only)</h5>
                     </div>
                     <div class="main-menubar d-flex align-items-center">
                         <nav class="hide">
