--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,20 @@
         </section>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyB29cLqngSDipozSYd1oFXwu2ZSWaqrJy4",
+            authDomain: "login-withnebulas.firebaseapp.com",
+            databaseURL: "https://login-withnebulas.firebaseio.com",
+            projectId: "login-withnebulas",
+            storageBucket: "",
+            messagingSenderId: "750365971344"
+        };
+        firebase.initializeApp(config);
+
+    </script>
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
