--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
                     <div class="main-menubar d-flex align-items-center">
                         <nav class="hide">
                             <a href="https://nebulas.io/">Nebulas.io</a>
-                            <a href="https://github.com/"><i class="fa fa-github"></i> GitHub</a>
+                            <a href="https://github.com/andy8052/LoginWithNebulas"><i class="fa fa-github"></i> GitHub</a>
                         </nav>
                         <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
                     </div>
