--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,11 @@
                 </div>
             </div>
         </section>
-    </div>
 
+    </div>
+    <div class="footer-bottom d-flex justify-content-between align-items-center flex-wrap">
+        <p class="footer-text m-0">Copyright &copy; 2018 All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com/">Colorlib</a></p>
+    </div>
     <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script>
         // Initialize Firebase
@@ -83,7 +86,6 @@
             messagingSenderId: "750365971344"
         };
         firebase.initializeApp(config);
-
     </script>
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
